--- a/CSS/dog-style.css
+++ b/CSS/dog-style.css
@@ -4,6 +4,26 @@ h1 {
     font-weight: 400;
     font-style: normal;
     font-size: 3em;
+
+    height: 200px;
+    width: 200px;
+    margin: 1rem 3rem;
+
+}
+
+/* #cat-title {
+    font-family: "roboto" !important;
+    /* font-size: 2rem; 
+} */
+
+/* #dog1 {
+    padding: 2rem;
+    border: 4px solid red;
+    margin: 2rem;
+} */
+
+.title {
+    font-family: "roboto";
 }
 
 p {
@@ -14,4 +34,22 @@ p {
     font-weight: 400;
     font-style: normal;
     font-size: 1rem;
+}
+
+input {
+    background-color: black;
+    color: white;
+}
+
+input[type="password"] {
+    background-color: lightpink;
+    color: blueviolet;
+}
+
+li:nth-child(2n) {
+    color: green;
+}
+
+li:hover {
+    color: red;
 }
