Photo gallery project is created

--- a/CSS/dog-style.css
+++ b/CSS/dog-style.css
@@ -8,6 +8,11 @@ h1 {
     height: 200px;
     width: 200px;
     margin: 1rem 3rem;
+    padding: 2rem;
+    border-style: solid;
+    border-color: red;
+    border-width: 10px;
+    border-radius: 50%;
 
 }
 
